// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Detail/Elements/ProductTree render 1`] = `
<div>
  <Styled(MuiBox)
    py={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-disabled-3"
      container={true}
      item={true}
      justifyContent="space-between"
      md={12}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        className=""
        item={true}
        md={8}
        onClick={[Function]}
      >
        <Typography
          className=""
          color="general-mid"
          inline={true}
          variant="caption"
          weight="normal"
        >
          L0 Page (Product Category)
        </Typography>
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="h5"
          weight="medium"
        >
          test
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        container={true}
        item={true}
        justifyContent="flex-end"
        md={4}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Switch
            disabled={true}
            onChange={[Function]}
            value={true}
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </Styled(MuiBox)>
</div>
`;

exports[`src/containers/ContentManagement/Product/Detail/Elements/ProductTree render isSingleProduct 1`] = `
<div>
  <Styled(MuiBox)
    py={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-disabled-3"
      container={true}
      item={true}
      justifyContent="space-between"
      md={12}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        className=""
        item={true}
        md={8}
        onClick={[Function]}
      >
        <Typography
          className=""
          color="general-mid"
          inline={true}
          variant="caption"
          weight="normal"
        >
          L0 Page (Product Category)
        </Typography>
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="h5"
          weight="medium"
        >
          test
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        container={true}
        item={true}
        justifyContent="flex-end"
        md={4}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Switch
            disabled={true}
            onChange={[Function]}
            value={true}
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mb={2}
    pl={4}
  >
    <WithStyles(ForwardRef(Divider)) />
    <Styled(MuiBox)>
      <Styled(MuiBox)
        py={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-disabled-3"
          container={true}
          item={true}
          justifyContent="space-between"
          md={12}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            className=""
            item={true}
            md={8}
            onClick={[Function]}
          >
            <Typography
              className=""
              color="general-mid"
              inline={true}
              variant="caption"
              weight="normal"
            >
              L1 Page
            </Typography>
            <Typography
              className=""
              color="inherit"
              inline={false}
              variant="h5"
              weight="medium"
            >
              Product category level 1
            </Typography>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            item={true}
            justifyContent="flex-end"
            md={4}
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <Switch
                disabled={true}
                onChange={[Function]}
                value={true}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-verticalDivider-5"
              orientation="vertical"
              variant="middle"
            />
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Star />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Pencil />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Delete />
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </Styled(MuiBox)>
      <Styled(MuiBox)
        pl={4}
      >
        <WithStyles(ForwardRef(Divider)) />
        <Styled(MuiBox)
          py={2}
        >
          <WithStyles(ForwardRef(Grid))
            className="makeStyles-disabled-3"
            container={true}
            item={true}
            justifyContent="space-between"
            md={12}
            xs={12}
          >
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              md={8}
              onClick={[Function]}
            >
              <Typography
                className=""
                color="general-mid"
                inline={true}
                variant="caption"
                weight="normal"
              >
                L2 Category
              </Typography>
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="h5"
                weight="medium"
              >
                test
              </Typography>
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              alignItems="center"
              container={true}
              item={true}
              justifyContent="flex-end"
              md={4}
              spacing={2}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
              >
                <Switch
                  onChange={[Function]}
                />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Divider))
                className="makeStyles-verticalDivider-5"
                orientation="vertical"
                variant="middle"
              />
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Star />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Pencil />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Delete />
              </WithStyles(ForwardRef(Grid))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </Styled(MuiBox)>
        <Styled(MuiBox)
          pl={4}
        >
          <WithStyles(ForwardRef(Divider)) />
          <Styled(MuiBox)
            py={2}
          >
            <WithStyles(ForwardRef(Grid))
              className=""
              container={true}
              item={true}
              justifyContent="space-between"
              md={12}
              xs={12}
            >
              <WithStyles(ForwardRef(Grid))
                className="makeStyles-clickableRow-2"
                item={true}
                md={8}
                onClick={[Function]}
              >
                <Typography
                  className=""
                  color="general-mid"
                  inline={true}
                  variant="caption"
                  weight="normal"
                >
                  Product Detail Page
                </Typography>
                <Typography
                  className=""
                  color="inherit"
                  inline={false}
                  variant="h5"
                  weight="medium"
                >
                  
                </Typography>
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                alignItems="center"
                container={true}
                item={true}
                justifyContent="flex-end"
                md={4}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                >
                  <Switch
                    disabled={false}
                    onChange={[Function]}
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Divider))
                  className="makeStyles-verticalDivider-5"
                  orientation="vertical"
                  variant="middle"
                />
                <WithStyles(ForwardRef(Grid))
                  className="makeStyles-button-1"
                  item={true}
                  onClick={[Function]}
                >
                  <Show />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  className="makeStyles-button-1"
                  item={true}
                  onClick={[Function]}
                >
                  <Pencil />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  className="makeStyles-button-1"
                  item={true}
                  onClick={[Function]}
                >
                  <Delete />
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </WithStyles(ForwardRef(Grid))>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="makeStyles-insertBtn-4 makeStyles-disabled-3"
            ml={3}
            onClick={[Function]}
          >
            <Memo />
            <Typography
              className=""
              color="green-main"
              inline={false}
              variant="buttonM"
              weight="normal"
            >
              ADD PRODUCT DETAIL PAGE
            </Typography>
          </Styled(MuiBox)>
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
    <WithStyles(ForwardRef(Divider)) />
    <Styled(MuiBox)
      className="makeStyles-insertBtn-4 makeStyles-disabled-3"
      ml={3}
      onClick={[Function]}
    >
      <Memo />
      <Typography
        className=""
        color="green-main"
        inline={false}
        variant="buttonM"
        weight="normal"
      >
        ADD L1 PAGE
      </Typography>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
</div>
`;

exports[`src/containers/ContentManagement/Product/Detail/Elements/ProductTree render isSingleProduct isSpecialCase false 1`] = `
<div>
  <Styled(MuiBox)
    py={2}
  >
    <WithStyles(ForwardRef(Grid))
      className=""
      container={true}
      item={true}
      justifyContent="space-between"
      md={12}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        className=""
        item={true}
        md={8}
        onClick={[Function]}
      >
        <Typography
          className=""
          color="general-mid"
          inline={true}
          variant="caption"
          weight="normal"
        >
          L0 Page (Product Category)
        </Typography>
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="h5"
          weight="medium"
        >
          test
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        container={true}
        item={true}
        justifyContent="flex-end"
        md={4}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Switch
            disabled={false}
            onChange={[Function]}
            value={false}
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mb={2}
    pl={4}
  >
    <WithStyles(ForwardRef(Divider)) />
    <Styled(MuiBox)>
      <Styled(MuiBox)
        py={2}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-disabled-3"
          container={true}
          item={true}
          justifyContent="space-between"
          md={12}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            className=""
            item={true}
            md={8}
            onClick={[Function]}
          >
            <Typography
              className=""
              color="general-mid"
              inline={true}
              variant="caption"
              weight="normal"
            >
              L1 Page
            </Typography>
            <Typography
              className=""
              color="inherit"
              inline={false}
              variant="h5"
              weight="medium"
            >
              Product category level 1
            </Typography>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            item={true}
            justifyContent="flex-end"
            md={4}
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <Switch
                disabled={true}
                onChange={[Function]}
                value={true}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Divider))
              className="makeStyles-verticalDivider-5"
              orientation="vertical"
              variant="middle"
            />
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Star />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Pencil />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              onClick={[Function]}
            >
              <Delete />
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </Styled(MuiBox)>
      <Styled(MuiBox)
        pl={4}
      >
        <WithStyles(ForwardRef(Divider)) />
        <Styled(MuiBox)
          py={2}
        >
          <WithStyles(ForwardRef(Grid))
            className="makeStyles-disabled-3"
            container={true}
            item={true}
            justifyContent="space-between"
            md={12}
            xs={12}
          >
            <WithStyles(ForwardRef(Grid))
              className=""
              item={true}
              md={8}
              onClick={[Function]}
            >
              <Typography
                className=""
                color="general-mid"
                inline={true}
                variant="caption"
                weight="normal"
              >
                L2 Category
              </Typography>
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="h5"
                weight="medium"
              >
                test
              </Typography>
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              alignItems="center"
              container={true}
              item={true}
              justifyContent="flex-end"
              md={4}
              spacing={2}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
              >
                <Switch
                  onChange={[Function]}
                />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Divider))
                className="makeStyles-verticalDivider-5"
                orientation="vertical"
                variant="middle"
              />
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Star />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Pencil />
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                onClick={[Function]}
              >
                <Delete />
              </WithStyles(ForwardRef(Grid))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </Styled(MuiBox)>
        <Styled(MuiBox)
          pl={4}
        >
          <WithStyles(ForwardRef(Divider)) />
          <Styled(MuiBox)
            py={2}
          >
            <WithStyles(ForwardRef(Grid))
              className="makeStyles-disabled-3"
              container={true}
              item={true}
              justifyContent="space-between"
              md={12}
              xs={12}
            >
              <WithStyles(ForwardRef(Grid))
                className=""
                item={true}
                md={8}
                onClick={[Function]}
              >
                <Typography
                  className=""
                  color="general-mid"
                  inline={true}
                  variant="caption"
                  weight="normal"
                >
                  Product Detail Page
                </Typography>
                <Typography
                  className=""
                  color="inherit"
                  inline={false}
                  variant="h5"
                  weight="medium"
                >
                  
                </Typography>
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid))
                alignItems="center"
                container={true}
                item={true}
                justifyContent="flex-end"
                md={4}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                >
                  <Switch
                    disabled={true}
                    onChange={[Function]}
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Divider))
                  className="makeStyles-verticalDivider-5"
                  orientation="vertical"
                  variant="middle"
                />
                <WithStyles(ForwardRef(Grid))
                  className=""
                  item={true}
                  onClick={[Function]}
                >
                  <Show />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  className=""
                  item={true}
                  onClick={[Function]}
                >
                  <Pencil />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  className=""
                  item={true}
                  onClick={[Function]}
                >
                  <Delete />
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </WithStyles(ForwardRef(Grid))>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="makeStyles-insertBtn-4 makeStyles-disabled-3"
            ml={3}
            onClick={[Function]}
          >
            <Memo />
            <Typography
              className=""
              color="green-main"
              inline={false}
              variant="buttonM"
              weight="normal"
            >
              ADD PRODUCT DETAIL PAGE
            </Typography>
          </Styled(MuiBox)>
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
    <WithStyles(ForwardRef(Divider)) />
    <Styled(MuiBox)
      className="makeStyles-insertBtn-4 makeStyles-disabled-3"
      ml={3}
      onClick={[Function]}
    >
      <Memo />
      <Typography
        className=""
        color="green-main"
        inline={false}
        variant="buttonM"
        weight="normal"
      >
        ADD L1 PAGE
      </Typography>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
</div>
`;
